--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,184 @@
-.App {
-  text-align: center;
+body{
+  background-color: #000;
+  font-family: var(--font-dm-sans)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a{
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root{
+  /* FONTT */
+  --font-dm-sans: "DM Sans", sans-serif;
+
+  /* COLORS */
+  --bg-color: #242424;
+  --bg-icon: #131313;
+  --bg-arrow-color: rgba(0,0,07)
+  /* Colors */
+  --text-base-dark: #000;
+  --text-base-light: #fff;
+  --text-sub: #a7a7a7;
+
+  --bg-icon: #131313;
+  --bg-top-bar: #61616142;
+  --grid-gap: 24px;
+  --column-count: 5;
+
+  /* Colors Cards */
+  --card1: rgb(0, 100, 80);
+  --card2: rgb(132, 0, 231);
+  --card3: rgb(30, 50, 100);
+  --card4: rgb(140, 25, 50);
+  --card5: rgb(232, 17, 91);
+  --card6: rgb(83, 122, 161);
+  --card7: rgb(142, 102, 172);
+  --card8: rgb(20, 138, 8);
+  --card9: rgb(30, 50, 100);
+  --card10: rgb(233, 20, 41);
+  --card11: rgb(80, 55, 80);
+  --card12: rgb(216, 64, 0);
+  --card13: rgb(186, 93, 7);
+  --card14: rgb(0, 30, 80);
+  --card15: rgb(60, 30, 80);
+
+  /* Fonts */
+  --font-dm-sans: "DM Sans", sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
 }
 
-.App-link {
-  color: #61dafb;
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  line-height: 1;
+  background: #000;
+  font-family: var(--font-dm-sans);
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+button {
+  border: none;
+  cursor: pointer;
 }
